TODO.txt: changing a couple TODO items

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,11 +3,11 @@ python-mpd TODO list
 
 == Pre-release
 * add setup.py, setup.cfg, and MANIFEST.in
-* add a little documentation, and other informational files
+* add a README.txt
 
 
 == Post-release
-* port scripts to new API and add them as examples
+* port personal scripts to the new API and add them as examples
 * check for EOF when reading and benchmark it
 * converter support
 * global for parsing MPD_HOST/MPD_PORT
