--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,17 @@
 python-mpd TODO List
 ====================
 
+Pre-release
+-----------
+
+* IPv6 support
+* remove line == SUCCESS test when in a command list (?)
+
+
+Post-release
+------------
+
 * port personal scripts to the new API and add them as examples
-* benchmark removal of line == SUCCESS test when in a command list
 * converter support
 * global for parsing MPD_HOST/MPD_PORT
 * global for parsing MPD error messages
-* IPv6 support (AF_INET6)
