--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,5 +4,6 @@ python-mpd Changes List
 Changes in 0.2.0
 ----------------
 
+* connect() will fail if already connected
 * commands may now raise ConnectionError
 * addid and update may now return None
