increment release number and complete renaming

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,16 @@
-python-mpd Changes List
+python-mpd2 Changes List
 =======================
+
+Changes in 0.4.0
+----------------
+
+* python3 support (python2.6 is minimum python version required)
+* support for the upcoming client-to-client protocol
+* adding new commands of mpd (seekcur, prior, priorid)
+* methods are explicit declared now, so they are shown in ipython
+* add unit tests
+* documented API to add new commands (see Future Compatible)
+
 
 Changes in 0.3.0
 ----------------
