--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 python-mpd2 Changes List
 =======================
 
+Changes in 0.4.1
+----------------
+
+* prio and prioid was spelled wrong
+* added config command
+* remove deprecated volume command
+
 Changes in 0.4.0
 ----------------
 
