--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,11 @@
 python-mpd2 Changes List
-=======================
+========================
+
+Changes in 0.4.2
+----------------
+
+* backward compatible unicode handling
+* added optional socket timeout parameter
 
 Changes in 0.4.1
 ----------------
@@ -13,9 +19,9 @@ Changes in 0.4.0
 
 * python3 support (python2.6 is minimum python version required)
 * support for the upcoming client-to-client protocol
-* adding new commands of mpd (seekcur, prior, priorid)
+* added new commands of mpd (seekcur, prior, priorid)
 * methods are explicit declared now, so they are shown in ipython
-* add unit tests
+* added unit tests
 * documented API to add new commands (see Future Compatible)
 
 
