--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,13 @@
 python-mpd2 Changes List
 ========================
 
+Changes in 0.4.4
+----------------
+
+* fix cleanup after broken connection
+* deprecate timeout parameter added in v0.4.2
+* add timeout and idletimeout property
+
 Changes in 0.4.3
 ----------------
 
