--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,10 @@
 python-mpd2 Changes List
 ========================
 
+Changes in 0.4.5
+----------------
+* support for logging
+
 Changes in 0.4.4
 ----------------
 
