--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,10 @@
 python-mpd2 Changes List
 ========================
 
+Changes in 0.4.6
+----------------
+* enforce utf8 for encoding/decoding in python3
+
 Changes in 0.4.5
 ----------------
 * support for logging
